staticfiles/css/main-desktop.css
/* ... */
html, body {
	height: 100%;
	width: 100%;
	font-family: 'Raleway', sans-serif;
	-webkit-box-sizing: border-box;
	        box-sizing: border-box;
	margin: 0 !important;
	padding: 0 !important;
}


@media only screen and (max-width: 1024px) {
	.container-fluid, 
	.container {
	padding: 4% !important;
}

}


h1 {
  	font-size: clamp(2rem, 2.5vw, 2.5rem);
	font-weight: 900;
	margin: 1% 0;
}

h2 {
	font-size: clamp(1rem, 1.8vw, 1.8rem);
	font-weight: 800;
	margin: 1% 0;
}

h3, h4 {
	font-size: clamp(1.1rem, 1.3vw, 1.3rem);
	font-weight: 700;
	margin: 1% 0;
}

h5 {
	font-size: clamp(1rem, 1.2vw, 1.2rem);
	font-weight: 500;
	margin: 1% 0;
}

p {
	font-size: 1em !important;
	color: var(--black) !important;
	margin: 0 !important;
	padding: 0 !important;
}

a {
	color: var(--blue);
	text-decoration: none !important;
	cursor: pointer;
}

.aspez {
	color: var(--white);
	text-decoration: underline;
	cursor: pointer;
}

.p-white {
	color: var(--white) !important;
}

.alert {
	margin-bottom: 0 !important;
}


table {
	font-size: 1rem;
}

thead {
	background-color: var(--blue);
	color: var(--white)
}

img {
	max-width: 100%;
}

.break {
	line-break: strict;
}

.fa-caret-down {
	width: 100%;
	color: var(--black);
	font-size: 3rem;
	-webkit-animation-name: shake-vertical;
	        animation-name: shake-vertical;
	-webkit-animation-duration: 7.2s;
	        animation-duration: 7.2s;
	-webkit-animation-timing-function: ease;
	        animation-timing-function: ease;
	-webkit-animation-delay: 0s;
	        animation-delay: 0s;
	-webkit-animation-iteration-count: infinite;
	        animation-iteration-count: infinite;
	-webkit-animation-direction: normal;
	        animation-direction: normal;
	-webkit-animation-fill-mode: none;
	        animation-fill-mode: none;
}

@-webkit-keyframes shake-vertical {
  0%{
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  10%{
    -webkit-transform: translateY(-8px);
    transform: translateY(-8px);
  }
  20%{
    -webkit-transform: translateY(8px);
    transform: translateY(8px);
  }
  30%{
    -webkit-transform: translateY(-8px);
    transform: translateY(-8px);
  }
  40%{
    -webkit-transform: translateY(8px);
    transform: translateY(8px);
  }
  50%{
    -webkit-transform: translateY(-8px);
    transform: translateY(-8px);
  }
  60%{
    -webkit-transform: translateY(8px);
    transform: translateY(8px);
  }
  70%{
    -webkit-transform: translateY(-8px);
    transform: translateY(-8px);
  }
  80%{
    -webkit-transform: translateY(6.4px);
    transform: translateY(6.4px);
  }
  90%{
    -webkit-transform: translateY(-6.4px);
    transform: translateY(-6.4px);
  }
  100%{
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}

@keyframes shake-vertical {
  0%{
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
  10%{
    -webkit-transform: translateY(-8px);
    transform: translateY(-8px);
  }
  20%{
    -webkit-transform: translateY(8px);
    transform: translateY(8px);
  }
  30%{
    -webkit-transform: translateY(-8px);
    transform: translateY(-8px);
  }
  40%{
    -webkit-transform: translateY(8px);
    transform: translateY(8px);
  }
  50%{
    -webkit-transform: translateY(-8px);
    transform: translateY(-8px);
  }
  60%{
    -webkit-transform: translateY(8px);
    transform: translateY(8px);
  }
  70%{
    -webkit-transform: translateY(-8px);
    transform: translateY(-8px);
  }
  80%{
    -webkit-transform: translateY(6.4px);
    transform: translateY(6.4px);
  }
  90%{
    -webkit-transform: translateY(-6.4px);
    transform: translateY(-6.4px);
  }
  100%{
    -webkit-transform: translateY(0);
    transform: translateY(0);
  }
}

.padding {
	padding: 65px 0;
}

.padding img {
	width: 100%;
}

/* ----------------------------------- Navigation START */

/* Side Bar - Mein Konto */

#sidebar.active {
	display: block;
	background-color: var(--blue);
	color: var(--white);
    min-width: 250px;
	max-width: 250px;
	top: 0;
	right: 0;
	margin: 10% 0 0 0;
	-webkit-transition: all 0.3s;
	-o-transition: all 0.3s;
	transition: all 0.3s;
	position: absolute;
}

.wrapper{
	display: -webkit-box;
	display: -ms-flexbox;
	display: flex;
	text-decoration: none;
	-webkit-transition: all 0.3s;
	-o-transition: all 0.3s;
	transition: all 0.3s;
}

#sidebar {
	display: none;
	margin-right: -250px;
	top: 0;
	right: 0;
}

#sidebar ul.components{
	padding: 5% 0 0 0;
	margin: 5% 0 0 0;
	list-style-type: none;
}

#sidebar ul li a {
	color: var(--white);
	padding: 10%;
	font-size: 1.2em;
	display: block;
}

#sidebar ul li a:hover{
	color: black;
	background: var(--grey);
	text-decoration: none;
}

#sidebar ul li.active>a,
a[aria-expanded="true"] {
	color: var(--white);
	background: var(--blue);
}

/* END Side Bar - Mein Konto */


/* ----------------------------------- Navigation END */

#home {
	background: url('/static/images/dichtungsshop.png') no-repeat center center fixed;
	background-size: cover;
	width: 100%;
	height:100%;
	display: flex;
  justify-content: center;
  padding-top: 7rem;
}



@media only screen and (max-width: 768px){
	#home {
	width:100%;
	height:auto;
	flex-direction: column;
	justify-content: flex-start;
	align-items: center


}
}


/* Dichtungen Page start */

.landing-text {
	color: var(--blue);
	background-color: var(--white);
	padding: 2rem 4rem;
}

@media only screen and (max-width: 768px){
	.landing-text {
	padding: 1rem;

}
}


.landing-text h1 {
	text-align: center;
	font-size: 400%;
	font-weight: 600;
	
}

.landing-text h2 {
	text-align: center;
	font-size: 250%;
	font-weight: 500;
	margin-bottom: 4rem;
}



.landing-text h3 {
	display: block;
  	margin-left: auto;
  	margin-right: auto;
  	width: 30%;
	padding: 2% 0 2% 0;
	background-color: var(--blue) !important;
	color: var(--white);

}

#home .fa-caret-down {
	width: 100%;

}





/* ------------------------------------ Dichtungskategorien */
#boxen {
	background-color: var(--blue);
	padding: 5% 0;
}
/* ... */

